--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ body {
     height: 60vh;
     /* !!--- تم التغيير لاسم ملفك "logo" ---!! */
     /* !!--- تأكد من امتداد الملف (قد يكون png, gif, إلخ) ---!! */
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%, var(--background-color) 100%), url('logo.jpg'); 
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%, var(--background-color) 100%), url('logo.png'); 
     background-size: cover;
     background-position: center;
     display: flex;
